--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -4,6 +4,9 @@ on:
     push:
         branches:
             - main
+    pull_request:
+        branches:
+            - main
 
 jobs:
     code-quality:
@@ -16,7 +19,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v2
               with:
-                  python-version: 3.10
+                  python-version: "3.10"
 
             - name: Install dependencies
               run: pip3 install -r requirements_dev.txt
